# threatflow

./: .gitignore  DEPLOY_NGINX.md  README.md  TODO.md  package-lock.json  payload.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/langflow-server/: pyproject.toml
apps/langflow-server/src/threatflow_langflow_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/langflow-server/src/threatflow_server/: app.py  components.py  executors.py
apps/langflow-ui-extensions/: package.json  vite.config.ts
apps/langflow-ui-extensions/public/: manifest.json
apps/langflow-ui-extensions/scripts/: verify_nodes.mjs
apps/langflow-ui-extensions/src/: api.ts  index.ts  manifest.ts
apps/langflow-ui-extensions/src/nodes/: DataflowEditor.ts  LayoutWriter.ts  OTMValidate.ts  RuleEngineEvaluate.ts  ThreagileAnalyze.ts  ThreagileExport.ts  (+4 more)
apps/nextgen-tm-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/nextgen-tm-frontend/public/: palette.json  palette.tm.json
apps/nextgen-tm-frontend/src/: App.tsx  AttackPathApp.tsx  PropertiesPanel.tsx  ThreatModelingApp.tsx  main.tsx  styles.css
apps/nextgen-tm-server/: pyproject.toml
apps/nextgen-tm-server/src/nextgen_tm_server/: app.py  auth.py  db.py  models.py  schemas.py  users.py
apps/nextgen-tm-server/src/nextgen_tm_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/nextgen-tm-server/src/nextgen_tm_server/llm/: __init__.py  templates.py
apps/nextgen-tm-server/src/nextgen_tm_server/routers/: auth_google.py
docs/: README.md  nextgen-threat-modeler.md
infrastructure/compose/: docker-compose.yaml
samples/: op_examples.json  otm_example.json
scripts/: publish_langflow_components.py  update_schemas.py
tests/: conftest.py
tests/adapters/: test_td_adapter.py  test_threagile_adapter.py
tests/backend/: test_components_api.py  test_executors_api.py  test_layout_writer.py
tests/otm_model/: test_validate_otm.py
(+72 files in other folders)
