[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatflow-monorepo-meta"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "contract: Contract tests for adapters and schemas",
  "e2e: End-to-end workflows"
]

