[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatflow-langflow-server"
version = "0.1.0"
description = "Threatflow Langflow server extensions (FastAPI, OTM, adapters)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "jsonschema>=4",
  "sqlalchemy>=2",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "tenacity>=8",
  "pydantic-settings>=2",
  "langflow>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

